# rspamdclient-rs

./: .dockerignore  Cargo.toml  README.md  TESTING.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: config.rs  error.rs  lib.rs
src/backend/: async_client.rs  mod.rs  sync_client.rs  traits.rs
src/protocol/: commands.rs  encryption.rs  mod.rs  scan.rs
tests/: integration_test.rs
tests/rspamd-config/: options.inc  worker-controller.inc  worker-normal.inc
