[package]
name = "rspamd-client"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://rspamd.com"
repository = "https://github.com/rspamd/rspamdclient-rs"
description = "Rspamd client API"
readme = "README.md"
categories = ["email"]
keywords = ["rspamd", "http"]
exclude = [".idea/"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
typed-builder = "0.20"
reqwest = { version = "0.12", optional = true, features = ["json", "rustls-tls", "zstd"] }
zstd = "0.13"
ureq = { version = "2.5", optional = true }
tokio = { version = "1.34", optional = true, features = ["full"] }
maybe-async = "0.2"
async-trait = "0.1"
bytes = "1.7.2"
tokio-stream = "0.1.16"
futures = "0.3.31"
attohttpc = { version = "0.28", optional = true }
native-tls = "0.2"
url = "2.5"
crypto_box = { version = "0.9", default-features = false, features = ["chacha20", "alloc", "getrandom"] }
rspamd-base32 = "0.1"
blake2b_simd = "1.0"
chacha20 = "0.9"
crypto_secretbox = { version = "0.1", default-features = false, features = ["chacha20"] }
curve25519-dalek = "4.1"
poly1305 = "0.8"
httparse = "1.9"

[features]
default = ["async"]
sync = ["attohttpc", "maybe-async/is_sync"]
async = ["reqwest", "tokio"]